# Lux-Design-S1

./: .eslintignore  .eslintrc  .gitignore  .mocharc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  Dev.md  Dockerfile  KitTracker.md  LICENSE  README.md  citation.cff  clean.sh  cli.sh  out.json  package-lock.json  package.json  package_all_kits.sh  run_first.sh  specs.md  stateful.json  targz_first.sh  test.json  tsconfig-build.json  tsconfig-buildes5.json  tsconfig.json  update_constants_for_kits.sh  update_lux_kits_for_tests.sh
.github/: FUNDING.yml
Adult Data Auto Analysis - LUX/: Adult Data-Analysis (Lux Lib ).ipynb  adult.data.csv
analysis/: mapanalysis.ipynb  mapanalysis.ts  mapanalysisv2.2.ipynb  mapgendist.json  mapgendistv2.2.json  replay.json  stepandreset.ipynb
dev/: KitTracker.md  strip_hrefs.py
kaggle_engine/: README.md  package-lock.json  package.json  pythonpackages.txt  run.ts  tsconfig.json  webpack.config.js
kits/: README.md
kits/rust/simple/: .gitignore  Cargo.toml  Dockerfile  compile.sh  main  main.py  makefile  rustfmt.toml
kits/rust/simple/lux/: Cargo.toml
kits/rust/simple/lux/src/: agent.rs  amounts.rs  annotate.rs  commands.rs  environment.rs  game_constants.json  game_constants.rs  lib.rs
kits/rust/simple/lux/src/entities/: city.rs  city_tile.rs  game_map.rs  mod.rs  player.rs  position.rs  resource.rs  units.rs
kits/rust/simple/src/: main.rs
server/: Dockerfile  README.md  copy_keys.sh  package-lock.json  package.json  server.ts  start.sh  tsconfig.json  upload.sh
src/: bin.ts  configs.json  defaults.ts  mock.ts  (+5 more)
(+273 files in other folders)
